<resources>
    <string name="app_name">CarHelper</string>
    <string name="location_not_found">לא הצלחנו לאתר את המיקום!\nיתכן אינך מחובר לרשת.</string>
    <string name="title_activity_maps">Map</string>
    <string name="garage_json">garages.json</string>
    <string name="your_location">אתה נמצא ב -</string>
    <string name="location_finding">מחפשים את המיקום</string>
    <string name="garage_near">המוסכים לידך</string>
    <string name="lights_text">נורות הזהרה</string>
    <string name="find_garage">מצא מוסך</string>
    <string name="shadow_divider">shadowDivider</string>
    <string name="sort_by">מיון לפי…</string>
    <string name="comma">,</string>

    <string name="required_fields">השדות המסומנים באדום הם שדות חובה\nיש למלא אותם ולנסות שוב.</string>
    <string name="wrong_email">כתובת הדואר האלקטרוני לא תקינה\nנסה שנית!</string>
    <string name="get_started">בואו נתחיל!</string>
    <string name="log_in">היכנס</string>
    <string name="your_name">שמך?</string>
    <string name="email">אימייל:</string>

    <string name="password">סיסמא:</string>
    <string name="history_empty_text">כאן יופיעו חיפוישם אחרונים</string>
    <string name="app_logo_cd">app_logo</string>
    <string name="disconnect_button_cd">disconnectButton</string>
    <string name="no_accessibility">no accessibility</string>
    <string name="loading">טוען נתונים...</string>
    <string name="garage_name">שם המוסך</string>
    <string name="garage_phone">טלפון</string>
    <string name="garage_type">סוג מוסך</string>
    <string name="garage_address">כתובת המוסך</string>
    <string name="carhelper">CarHelper</string>
    <string name="name_not_required">אם אתה כבר רשום שדה שם אינו חובה</string>
    <string name="history_search">היסטוריית חיפושים</string>
    <string name="firebase_invalid_password">the password is invalid or the user does not have a password</string>

</resources>
