<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/garageItemRootView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical"
    android:background="@drawable/light_info_frame_style"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/topline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/garageName"
            tools:text="@string/garage_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            tools:text="@string/garage_phone"
            android:id="@+id/garagePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLine"
        android:layout_below="@id/topline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            tools:text="@string/garage_type"
            android:id="@+id/garageType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            tools:text="@string/garage_address"
            android:id="@+id/garageAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>