<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/name_not_required"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ETName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/edit_text_field_style"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textColorHint="#cccccc"
            android:textSize="18sp"
            android:translationZ="5dp"
            tools:ignore="Autofill" />

        <EditText
            android:text="admin@admin.com"
            android:id="@+id/ETEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_field_style"
            android:drawableStart="@drawable/login_icon"
            android:drawableTint="@color/mainTextColor"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/mainTextColor"
            android:textColorHint="#cccccc"
            android:textSize="18sp"
            android:translationZ="5dp"
            tools:ignore="Autofill" />

        <EditText
            android:text="123456"
            android:id="@+id/ETPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_field_style"
            android:drawableStart="@drawable/password_icon"
            android:drawableTint="@color/mainTextColor"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/mainTextColor"
            android:textColorHint="#cccccc"
            android:textSize="18sp"
            android:translationZ="5dp"
            tools:ignore="Autofill" />

    </LinearLayout>

</RelativeLayout>