<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:translationZ="5dp"
        android:background="@drawable/text_frame_style"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/your_location"
            android:textColor="@color/mainTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/location_finding"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></FrameLayout>

        <TextView
            android:id="@+id/garagesListCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/top_border"
            android:elevation="5dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:text="@string/garage_near"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="18sp"
            android:translationZ="5dp" />

        <FrameLayout
            android:id="@+id/garageListContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </FrameLayout>


    </LinearLayout>


</RelativeLayout>