<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/main_background_color"
    android:layout_height="match_parent"
    tools:context=".Screens.LoginActivity">

    <TextView
        android:id="@+id/requiredFieldsTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/required_fields"
        android:textAlignment="center"
        android:textColor="@color/wrong_text"
        card_view:layout_constraintBottom_toTopOf="@+id/buttons_group"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/sign_in_fields_container" />

    <FrameLayout
        android:id="@+id/sign_in_fields_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttons_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/sign_in_fields_container"
        card_view:layout_constraintVertical_bias="1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:elevation="3dp"
            android:translationZ="5dp"
            app:cardCornerRadius="100dp">

            <Button
                android:id="@+id/getStartedBTN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_button_style"
                android:text="@string/get_started" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/LAVGetStarted"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="continuous_wave_loader.json"
                app:lottie_loop="true"
                android:visibility="gone"
                app:lottie_speed="1.25" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@android:color/transparent"
            card_view:cardElevation="0dp">

            <Button
                android:id="@+id/logInBTN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:stateListAnimator="@null"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/LAVLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="continuous_wave_loader.json"
                app:lottie_loop="true"
                android:visibility="gone"
                app:lottie_speed="1.25"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>